Fix: form easier to use on mobile

--- a/components/create-ingredient-form.module.css
+++ b/components/create-ingredient-form.module.css
@@ -128,3 +128,17 @@
   cursor: pointer;
   outline: none;
 }
+
+@media screen and (max-width: 450px) {
+  .pageContent {
+    margin: var(--small-spacing);
+  }
+
+  .pageContent h2 {
+    text-align: center;
+  }
+
+  .buttonGroup {
+    justify-content: space-evenly;
+  }
+}
